unpackaged/main/default/objects/FSL_ServiceSettings__c/FSL_ServiceSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Integration Service Settings for outbound calls to D3/Glympse.</description>
    <label>FSL ServiceSettings</label>
</CustomObject>