unpackaged/main/default/objects/FSL_ServiceSettings__c/fields/RequestEventType__c.field-meta.xml
<CustomField>
    <fullName>RequestEventType__c</fullName>
    <label>RequestEventType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>