unpackaged/main/default/objects/FSL_ServiceSettings__c/fields/RequestSubtype__c.field-meta.xml
<CustomField>
    <fullName>RequestSubtype__c</fullName>
    <label>RequestSubtype</label>
    <length>80</length>
    <type>Text</type>
</CustomField>