unpackaged/main/default/objects/FSL_ServiceSettings__c/fields/Source_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_System_ID__c</fullName>
    <label>Source System ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>