unpackaged/main/default/objects/FSL_ServiceSettings__c/fields/Source_System_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Org_Name__c</fullName>
    <label>Source System Org Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>