unpackaged/main/default/objects/FSL_ServiceSettings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RequestEventType__c</columns>
    <columns>RequestSubtype__c</columns>
    <columns>Source_System_ID__c</columns>
    <columns>Source_System_Org_Code__c</columns>
    <columns>Source_System_Org_Name__c</columns>
    <columns>Version__c</columns>
    <columns>SETUP_TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>